# KDSLib

./: CMakeLists.txt  Readme.md  RendererNotes.txt  glprogram.cpp  glutil.cpp  test.cpp
include/: color.h  glmesh.h  glprogram.h  glutil.h  utils.h  vector2.h  vector3.h  vertex.h
